--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,72 @@
 
 + C++ 相关的理论基础知识
 
+## public 关键字
+
+在C++中，`public`是一种访问修饰符（Access Modifier），用于定义类的成员的访问权限。`public`成员在类的内部和外部都可见，可以被任何对象或函数访问。
+
+以下是一些关键点来详细解释`public`的使用和行为：
+
+1. `public`成员在类内部和外部可见：`public`成员可以在类内部的成员函数中访问，也可以在类的外部通过对象或类名加点操作符（`.`）进行访问。
+
+2. `public`成员可以被任何对象或函数访问：`public`成员可以被类的对象、其他对象或函数直接访问。这使得它们可以作为类的接口提供给外部使用。
+
+3. `public`成员没有访问限制：`public`成员在类的内外部没有访问限制，可以被任意代码使用和修改。
+
+4. `public`继承：当一个类以`public`方式继承另一个类时，基类的`public`成员在派生类中仍然是`public`成员，可以直接访问。
+
+5. `public`与封装性：`public`成员违反了类的封装性，因为它们可以被外部直接访问和修改。封装性的目标是将数据和操作封装在类的内部，通过类的接口进行访问。
+
+在C++中，使用`public`修饰符来声明类的成员是一种常见的做法，特别是用于定义类的公共接口。公共接口定义了类对外提供的功能和数据，对外部代码是可见和可访问的，用于与类进行交互和操作。通过将公共成员放在`public`部分，可以明确地表明这些成员是供外部使用的。
+
+尽管`public`成员在类的封装性方面存在一些限制，但它们在许多情况下是必需的，特别是当需要公开某些功能或数据时。在设计类时，需要仔细考虑哪些成员应该是`public`的，以确保良好的封装性和代码安全性。
+
+---
+
+## protected 关键字
+
+在C++中，`protected`是一种访问修饰符（Access Modifier），用于定义类的成员的访问权限。`protected`成员在类内部和派生类中可见，但在类的外部不可直接访问。
+
+当类的成员被声明为`protected`时，它们可以在同一类的成员函数中访问，并且可以在该类的派生类中进行访问。这意味着派生类可以继承并访问基类的`protected`成员。而对于类的外部，无法直接访问`protected`成员。
+
+以下是一些关键点来详细解释`protected`的使用和行为：
+
+1. `protected`成员在派生类中可见：当一个类被继承时，派生类可以访问基类中声明为`protected`的成员变量和成员函数。
+
+2. `protected`成员在类内部可见：类内部的成员函数可以访问类中的所有成员，包括`protected`成员。
+
+3. `protected`成员无法在类的外部直接访问：类的外部无法直接访问类的`protected`成员变量和成员函数。只有通过类的公共成员函数或在派生类中进行间接访问。
+
+4. `protected`继承：当一个类以`protected`方式继承另一个类时，基类的`public`和`protected`成员在派生类中都变为`protected`成员，而基类的`private`成员在派生类中仍然是不可访问的。
+
+5. `protected`与`private`的区别：`protected`成员在派生类中可见，而`private`成员在派生类中不可见。只有类内部可以访问`private`成员，而类内部和派生类中都可以访问`protected`成员。
+
+使用`protected`修饰符可以实现类的封装性和继承性的结合。它可以保护类的成员不被直接访问和修改，同时又允许派生类继承和访问这些成员，提供了更灵活的访问控制方式。
+
+---
+
+## private 关键字
+
+在C++中，`private`是一种访问修饰符（Access Modifier），用于定义类的成员的访问权限。`private`成员在类的内部可见，但在类的外部不可直接访问。
+
+以下是一些关键点来详细解释`private`的使用和行为：
+
+1. `private`成员在类内部可见：`private`成员只能在类的成员函数内部进行访问。这意味着只有类的其他成员函数可以直接访问`private`成员。
+
+2. `private`成员在类的外部不可见：类的外部无法直接访问类的`private`成员变量和成员函数。只有通过类的公共成员函数或友元函数才能间接访问。
+
+3. 封装性：将成员声明为`private`是一种封装的实现方式，它隐藏了类的内部实现细节，使外部代码无法直接访问和修改类的私有成员。
+
+4. 数据隐藏：通过将数据成员声明为`private`，可以确保数据的安全性和完整性。外部代码无法直接修改私有数据成员，只能通过类的公共成员函数来控制数据的访问和修改。
+
+5. `private`继承：当一个类以`private`方式继承另一个类时，基类的`public`和`protected`成员在派生类中变为`private`成员，只能在派生类的成员函数内部访问。
+
+通过将类的成员声明为`private`，可以限制对类的内部实现的访问，提供更好的封装性和安全性。这样，类的使用者只能通过类的公共接口进行操作，而无法直接访问和修改类的私有成员。这有助于防止不合法的访问和错误的修改，增加了代码的可维护性和可靠性。
+
+封装是面向对象编程中的一个重要概念，它通过将数据和操作封装在类的内部来保护数据的完整性和安全性。`private`成员在C++中是实现封装的关键机制之一。
+
+---
+
 ## char 关键字
 
 在C++中，`char`是一种基本数据类型，用于表示字符型数据。与C语言中的`char`类型相似，C++的`char`关键字也具有以下特点和用途：
