--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,100 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## C++11 从路径中提取文件名和路径
+
+在 C++11 中，可以使用一些字符串操作函数和库来从路径中提取文件名和路径。下面是一个示例代码，展示如何在 C++11 中从路径中提取文件名和路径：
+
+```cpp
+#include <iostream>
+#include <string>
+
+// 从路径中提取文件名
+std::string extractFilename(const std::string& path) {
+    size_t lastSlash = path.find_last_of('/');
+    if (lastSlash != std::string::npos) {
+        return path.substr(lastSlash + 1);
+    }
+    return path;
+}
+
+// 从路径中提取路径部分
+std::string extractPath(const std::string& path) {
+    size_t lastSlash = path.find_last_of('/');
+    if (lastSlash != std::string::npos) {
+        return path.substr(0, lastSlash);
+    }
+    return "";
+}
+
+int main() {
+    std::string filePath = "/home/user/Documents/example.txt";
+
+    // 提取文件名
+    std::string filename = extractFilename(filePath);
+    std::cout << "文件名: " << filename << std::endl;
+
+    // 提取路径
+    std::string path = extractPath(filePath);
+    std::cout << "路径: " << path << std::endl;
+
+    return 0;
+}
+```
+
+在上述代码中，我们定义了两个函数 `extractFilename()` 和 `extractPath()`，分别用于提取文件名和路径。这些函数使用了 `std::string` 类型的操作函数，如 `find_last_of()` 和 `substr()`，来进行字符串处理。
+
+运行上述代码将输出以下结果：
+
+```
+文件名: example.txt
+路径: /home/user/Documents
+```
+
+请注意，这只是一种在 C++11 中从路径中提取文件名和路径的方法之一。这种方法依赖于字符串操作，可能不如 C++17 中的 `<filesystem>` 头文件提供的功能丰富和方便。如果你的项目可以使用 C++17 或更高版本的标准，那么推荐使用 `<filesystem>` 头文件来处理文件路径。
+
+---
+
+## C++17 从路径中提取文件名和路径
+
+在 C++ 中，你可以使用标准库中的`<filesystem>`头文件来提取文件名和路径。`<filesystem>`是在 C++17 中引入的，并提供了一组函数和类来操作文件系统路径。
+
+下面是一个示例代码，展示如何从路径中提取文件名和路径：
+
+```cpp
+#include <iostream>
+#include <filesystem>
+
+namespace fs = std::filesystem;
+
+int main() {
+    fs::path filePath = "/home/user/Documents/example.txt";
+
+    // 提取文件名
+    std::string filename = filePath.filename().string();
+    std::cout << "文件名: " << filename << std::endl;
+
+    // 提取路径
+    std::string path = filePath.parent_path().string();
+    std::cout << "路径: " << path << std::endl;
+
+    return 0;
+}
+```
+
+在上述代码中，我们首先定义了一个路径 `filePath`，然后使用 `filename()` 函数来提取文件名，`parent_path()` 函数来提取路径。最后，我们将文件名和路径打印输出。
+
+运行上述代码将输出以下结果：
+
+```
+文件名: example.txt
+路径: /home/user/Documents
+```
+
+这样，你就可以从路径中提取文件名和路径，以便进一步在 C++ 程序中使用。请确保在编译时启用了对 C++17 标准的支持，以便使用 `<filesystem>` 头文件。
+
+---
+
 ## 通过进程号 杀死指定进程
 
 在Linux中，可以使用C++编写程序来杀死指定的进程。以下是一个简单的示例：
