--- a/Grandhonor/rk_工地盒子/1-4_项目周期.md
+++ b/Grandhonor/rk_工地盒子/1-4_项目周期.md
@@ -11,8 +11,8 @@
 
 + 6月5日 -- 6月9日
   + 完成算力节点的业务流程(6月9日)
-  + 与vca联调，四种检测业务能够正常工作
-  + 与管理节点联调，将数据持久化，存储到数据库
+  + 与vca联调，四种检测业务能够正常工作(搁置)
+  + 与管理节点联调，将数据持久化，存储到数据库(6月16日)
 
 + 6月12日 -- 6月16日
   + 完成图片推流模块，能够将视频流推送到前端(6月9日)
