更新了深度学习

--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,91 @@
 
 + C++ 相关的理论基础知识
 
+## linux sysroot 是什么
+
+在Linux中，sysroot是指用于交叉编译的根文件系统（root filesystem）。它是一个包含目标平台上的系统库、头文件和其他依赖项的目录。
+
+当进行交叉编译时，您通常需要访问目标平台的系统库和头文件，以确保编译的代码与目标平台上的运行时环境兼容。这些系统库和头文件包含了特定于目标平台的API定义、标准库函数等。
+
+sysroot提供了一个用于交叉编译的独立环境，使您能够在开发主机上使用目标平台的系统库和头文件。通过将sysroot指定为交叉编译工具链的一部分，编译器和其他工具将在sysroot中查找目标平台的依赖项。
+
+在交叉编译工具链的配置中，您可以指定sysroot的路径，以便编译器在编译过程中正确地引用目标平台的系统库和头文件。这样，您就可以编译适用于目标平台的应用程序。
+
+sysroot的结构类似于目标平台的根文件系统结构，但通常只包含必要的系统库和头文件，而不是完整的根文件系统。它是一个与目标平台相关的特定目录，可能包含像`usr/include`、`usr/lib`等子目录。
+
+通过使用sysroot，您可以确保交叉编译的代码与目标平台上的运行环境保持一致，并且可以在开发主机上进行测试和构建，而无需实际部署到目标设备上。
+
+---
+
+## linux arm-linux-gnueabihf 是什么
+
+`arm-linux-gnueabihf` 是一个用于ARM架构的交叉编译工具链。让我们逐个解释每个组成部分的含义：
+
+- `arm`: 表示目标架构是ARM。ARM是一种广泛用于嵌入式系统和移动设备的处理器架构。
+
+- `linux`: 表示目标操作系统是Linux。这意味着您可以使用该工具链构建在Linux上运行的应用程序。
+
+- `gnueabihf`: 这是一组ABI（Application Binary Interface）和硬浮点（hard float）的选项。
+
+  - ABI：ABI定义了应用程序与操作系统之间的接口规范，包括函数调用约定、寄存器用途和内存布局等。在这种情况下，`gnueabi`表示使用GNU工具链的ARM嵌入式ABI。
+
+  - 硬浮点：`hf`表示硬浮点。在ARM架构中，浮点运算可以使用软件模拟实现（软浮点）或使用硬件浮点单元（硬浮点）。`gnueabihf`表示使用硬浮点，这意味着浮点运算将由ARM处理器的硬件浮点单元执行，而不是通过软件模拟。
+
+因此，`arm-linux-gnueabihf`工具链适用于在ARM架构上运行Linux操作系统的应用程序的交叉编译。它提供了必要的编译器、链接器和库文件等工具，以便您可以在开发主机上构建适用于ARM架构的应用程序。
+
+---
+
+## Linux 交叉编译
+
+在Linux上进行交叉编译是指在一个操作系统上开发和构建适用于另一个不同架构或操作系统的软件。这通常用于在一台主机上构建用于嵌入式设备、嵌入式系统或不同操作系统的应用程序。
+
+以下是进行Linux交叉编译的一般步骤：
+
+1. 安装交叉编译工具链：首先，您需要安装适用于目标架构的交叉编译工具链。工具链包括交叉编译器、链接器和库文件等。通常，工具链的名称以目标平台的架构开头，如arm-linux-gnueabi-。
+
+2. 配置环境变量：将交叉编译工具链添加到系统的PATH环境变量中。这样，您可以在命令行中直接使用交叉编译器和其他工具。
+
+3. 配置构建系统：如果您正在使用自动构建系统（如Makefile或CMake），请确保将构建系统配置为使用交叉编译工具链。这包括设置正确的编译器、链接器和其他构建选项。
+
+4. 编写代码：编写适用于目标平台的代码。这可能涉及到使用特定于目标平台的API、库或头文件等。
+
+5. 进行交叉编译：使用交叉编译工具链编译和链接您的代码。例如，如果您使用C语言编写代码，可以使用交叉编译器来编译源文件并生成目标平台的可执行文件。
+
+以下是一个简单的示例，演示如何在Linux上进行交叉编译：
+
+1. 假设您要交叉编译一个适用于ARM架构的应用程序。
+
+2. 安装ARM架构的交叉编译工具链，例如arm-linux-gnueabi-gcc、arm-linux-gnueabi-ld等。您可以从交叉编译工具链的官方网站或Linux发行版的软件包管理器中获取。
+
+3. 配置环境变量，将交叉编译工具链添加到PATH中。例如，在bash shell中，您可以执行以下命令：
+
+```
+export PATH=/path/to/cross-compiler/bin:$PATH
+```
+
+确保将`/path/to/cross-compiler/bin`替换为您安装交叉编译工具链的实际路径。
+
+4. 编写适用于ARM架构的代码，保存为`main.c`文件：
+
+```c
+#include <stdio.h>
+
+int main() {
+    printf("Hello, ARM!\n");
+    return 0;
+}
+```
+
+5. 使用交叉编译器编译代码：
+
+```
+arm-linux-gnueabi-gcc -o hello_arm main.c
+```
+
+这将使用交叉编译器生成一个名为`hello_arm`的可执行文件，该文件适用于ARM架构的设备。
+
+---
+
 ## public 关键字
 
 在C++中，`public`是一种访问修饰符（Access Modifier），用于定义类的成员的访问权限。`public`成员在类的内部和外部都可见，可以被任何对象或函数访问。
