--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,39 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## C++11 "2023-6-21 10:15:2"日期字符串 取出年月日
+
+要从日期字符串 "2023-6-21 10:15:2" 中提取年、月、日，可以使用C++中的字符串处理函数和算法，以及字符串流。以下是一个示例代码：
+
+```cpp
+#include <iostream>
+#include <string>
+#include <sstream>
+
+int main() {
+    std::string str = "2023-6-21 10:15:2";
+    std::istringstream iss(str);
+    std::string year, month, day;
+
+    // 提取年月日
+    std::getline(iss, year, '-');
+    std::getline(iss, month, '-');
+    std::getline(iss, day, ' ');
+
+    std::cout << "提取的年月日为：" << year << "-" << month << "-" << day << std::endl;
+
+    return 0;
+}
+```
+
+在上面的代码中，我们使用std::istringstream将日期字符串转化为字符串流，然后使用std::getline函数和'-'和' '作为分隔符，逐行读取字符串流中的内容，分别存储到year、month和day字符串中。最后，我们输出提取到的年月日。
+
+运行代码后，输出结果将是：2023-6-21
+
+请注意，以上代码只是简单示例，假设日期字符串的格式固定且正确。如果实际情况与示例不符，你可能需要根据具体需求进行适当的调整和处理。另外，对于日期和时间的处理，你也可以考虑使用C++标准库中的日期时间库，如`<chrono>`和`<ctime>`，以便进行更为灵活和全面的日期时间操作。
+
+---
+
 ## C++11 从路径中提取文件名和路径
 
 在 C++11 中，可以使用一些字符串操作函数和库来从路径中提取文件名和路径。下面是一个示例代码，展示如何在 C++11 中从路径中提取文件名和路径：
