--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,67 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## C++11 解析main函数从命令行接收的参数
+
+在 C++ 中，你可以通过 `main` 函数的参数来解析命令行输入。`main` 函数接受两个参数，一个是 `argc`，表示命令行参数的数量，另一个是 `argv`，是一个指向指针数组的指针，其中每个指针指向一个命令行参数的字符串。
+
+下面是一个示例代码，展示如何解析 `main` 输入参数：
+
+```cpp
+#include <iostream>
+
+int main(int argc, char* argv[]) {
+    // 输出命令行参数数量
+    std::cout << "argc: " << argc << std::endl;
+
+    // 输出每个命令行参数
+    for (int i = 0; i < argc; ++i) {
+        std::cout << "argv[" << i << "]: " << argv[i] << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在上述示例中，我们通过遍历 `argv` 数组来访问每个命令行参数，并使用 `argc` 获取参数数量。你可以根据需要进一步处理命令行参数，例如解析选项、获取参数值等。
+
+下面是一个示例，展示如何解析命令行选项和参数值：
+
+```cpp
+#include <iostream>
+
+int main(int argc, char* argv[]) {
+    for (int i = 1; i < argc; ++i) {
+        std::string arg = argv[i];
+
+        if (arg == "-h" || arg == "--help") {
+            std::cout << "Help message" << std::endl;
+        } else if (arg == "-v" || arg == "--version") {
+            std::cout << "Version 1.0" << std::endl;
+        } else if (arg == "-f" || arg == "--file") {
+            // 检查下一个参数是否存在
+            if (i + 1 < argc) {
+                std::string filename = argv[i + 1];
+                std::cout << "File: " << filename << std::endl;
+                ++i;  // 跳过下一个参数
+            } else {
+                std::cerr << "Missing filename argument" << std::endl;
+            }
+        } else {
+            std::cerr << "Unknown option: " << arg << std::endl;
+        }
+    }
+
+    return 0;
+}
+```
+
+在上述示例中，我们检查每个命令行参数，根据不同的选项执行相应的操作。例如，如果参数是 `-h` 或 `--help`，我们输出帮助信息；如果参数是 `-f` 或 `--file`，我们检查下一个参数是否存在，并输出文件名。
+
+你可以根据实际需求扩展这个示例，并根据需要处理更多的命令行选项和参数值。
+
+---
+
 ## C++11 "2023-6-21 10:15:2"日期字符串 取出年月日
 
 要从日期字符串 "2023-6-21 10:15:2" 中提取年、月、日，可以使用C++中的字符串处理函数和算法，以及字符串流。以下是一个示例代码：
