更新了深入理解计算机系统第五章,增加了命令gprof

--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,20 @@
 
 + C++ 相关的理论基础知识
 
+## 1970年1月1日以来的时间戳称为什么时间
+
+在计算机科学中，1970年1月1日以来的时间戳被称为UNIX时间戳（Unix Timestamp），也称为Epoch时间。
+
+UNIX时间戳是一种表示时间的方式，它以秒为单位计量时间，从协调世界时（UTC）的1970年1月1日午夜（零点）开始计算。UNIX时间戳记录了自那个时间点起经过的秒数。
+
+UNIX时间戳在计算机系统中广泛使用，特别是在UNIX、Linux和类UNIX操作系统中。它被用作计算和记录时间、日期的标准方法，也被广泛应用于时间相关的编程和系统操作。
+
+通过UNIX时间戳，我们可以方便地进行时间计算、时间戳的转换和比较，而不受时区和日期格式的影响。许多编程语言和操作系统提供了相关的函数和工具，用于将UNIX时间戳转换为日期和时间，以及进行时间戳的操作和处理。
+
+需要注意的是，UNIX时间戳是基于UTC的，不考虑夏令时（Daylight Saving Time）或其他时区调整。如果需要考虑时区差异，可能需要进行额外的时区转换和调整操作。
+
+---
+
 ## linux sysroot 是什么
 
 在Linux中，sysroot是指用于交叉编译的根文件系统（root filesystem）。它是一个包含目标平台上的系统库、头文件和其他依赖项的目录。
