--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,106 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## gprof 性能分析 程序剖析
+
+在Linux环境下，使用gprof进行C++程序的性能分析与使用方法类似于前面提到的通用gprof用法。下面是关于在Linux中使用gprof进行C++程序性能分析的详细解释：
+
+1. 编译时启用性能计数器：与使用gprof分析C程序一样，在编译C++程序时也需要使用特殊的编译选项启用性能计数器。使用g++编译器时，可以添加"-pg"选项。例如：
+
+   ```
+   $ g++ -pg -o myprogram myprogram.cpp
+   ```
+
+2. 运行程序：编译完成后，运行生成的可执行文件。程序执行过程中会记录性能数据。
+
+   ```
+   $ ./myprogram
+   ```
+
+3. 生成gmon.out文件：当程序运行完毕后，会生成一个名为"gmon.out"的文件，其中包含了程序的性能数据。
+
+4. 生成性能报告：使用gprof工具来分析性能数据并生成性能报告。使用以下命令生成报告：
+
+   ```
+   $ gprof myprogram gmon.out > report.txt
+   ```
+
+   这将生成一个名为"report.txt"的文件，其中包含了函数级别的性能报告。
+
+5. 分析性能报告：打开生成的性能报告文件，你将看到与前述相似的内容，包括每个函数的调用次数和占总运行时间的百分比，每个函数内部花费的时间，以及函数调用关系图。
+
+与分析C程序相比，对于C++程序，性能分析结果可能会更加复杂，因为C++中涉及到了对象的构造和析构，以及虚函数的动态调用等特性。因此，在分析C++程序时，除了关注函数级别的性能数据外，还需要注意类和对象的性能开销。
+
+需要注意的是，gprof的性能分析结果是基于采样数据得出的，可能存在一定的误差。为了获得更准确的性能分析结果，建议在优化前后进行多次运行，并对多次运行结果取平均值。
+
+希望以上解释能够帮助你理解如何在Linux中使用gprof进行C++程序的性能分析。如果你还有其他问题，请随时提问。
+
+---
+
+## C++11 自然时间
+
+在C++中，你可以使用标准库提供的时间相关函数和类来处理自然时间。下面是一些常用的C++函数和类，用于处理自然时间：
+
+1. time() 函数：
+   `time()` 函数返回当前时间的秒数，自1970年1月1日以来的时间戳。可以使用 `<ctime>` 头文件来访问该函数。
+
+   示例：
+   ```cpp
+   #include <iostream>
+   #include <ctime>
+
+   int main() {
+       std::time_t currentTime = std::time(nullptr);
+       std::cout << "Current timestamp: " << currentTime << std::endl;
+       return 0;
+   }
+   ```
+
+2. std::tm 结构体：
+   `std::tm` 是一个表示时间的结构体，包含了年、月、日、时、分、秒等字段。可以使用 `<ctime>` 头文件来访问该结构体。
+
+   示例：
+   ```cpp
+   #include <iostream>
+   #include <ctime>
+
+   int main() {
+       std::time_t currentTime = std::time(nullptr);
+       std::tm* localTime = std::localtime(&currentTime);
+       std::cout << "Current local time: "
+                 << localTime->tm_year + 1900 << "-" << localTime->tm_mon + 1 << "-" << localTime->tm_mday << " "
+                 << localTime->tm_hour << ":" << localTime->tm_min << ":" << localTime->tm_sec << std::endl;
+       return 0;
+   }
+   ```
+
+3. std::chrono 命名空间：
+   `<chrono>` 头文件提供了一组类和函数，用于处理时间间隔和时钟。它提供了高精度的计时功能和各种时间单位的表示。
+
+   示例：
+   ```cpp
+   #include <iostream>
+   #include <chrono>
+
+   int main() {
+       auto currentTime = std::chrono::system_clock::now();
+       std::time_t currentTimeStamp = std::chrono::system_clock::to_time_t(currentTime);
+       std::cout << "Current timestamp: " << currentTimeStamp << std::endl;
+
+       std::chrono::system_clock::time_point oneHourLater = currentTime + std::chrono::hours(1);
+       std::time_t oneHourLaterStamp = std::chrono::system_clock::to_time_t(oneHourLater);
+       std::cout << "One hour later: " << std::ctime(&oneHourLaterStamp) << std::endl;
+
+       return 0;
+   }
+   ```
+
+上述示例演示了使用 `<chrono>` 头文件中的类和函数获取当前时间戳，以及进行时间间隔的计算。
+
+这些是C++中处理自然时间的一些常用工具和类。使用这些函数和类，你可以获取当前时间、进行时间戳的转换，以及计算时间间隔和操作。
+
+---
+
 ## C++11 解析main函数从命令行接收的参数
 
 在 C++ 中，你可以通过 `main` 函数的参数来解析命令行输入。`main` 函数接受两个参数，一个是 `argc`，表示命令行参数的数量，另一个是 `argv`，是一个指向指针数组的指针，其中每个指针指向一个命令行参数的字符串。
