--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,247 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## C++11 年月日换算成秒
+
+要将给定的年、月、日转换为时间戳（Unix时间戳），可以使用C++11中的`std::chrono`库进行操作。下面是一个示例代码，它将输入的年、月、日转换为时间戳：
+
+```cpp
+#include <iostream>
+#include <chrono>
+#include <ctime>
+
+std::time_t getTimestamp(int year, int month, int day)
+{
+    std::tm timeinfo = {};
+    timeinfo.tm_year = year - 1900; // 年份需要减去1900
+    timeinfo.tm_mon = month - 1; // 月份需要减去1
+    timeinfo.tm_mday = day;
+
+    std::time_t timestamp = std::mktime(&timeinfo);
+    return timestamp;
+}
+
+int main()
+{
+    int year, month, day;
+    std::cout << "输入年份：";
+    std::cin >> year;
+    std::cout << "输入月份：";
+    std::cin >> month;
+    std::cout << "输入日期：";
+    std::cin >> day;
+
+    std::time_t timestamp = getTimestamp(year, month, day);
+    std::cout << "时间戳：" << timestamp << std::endl;
+
+    return 0;
+}
+```
+
+在上面的示例中，我们定义了一个`getTimestamp`函数，它接受年、月、日作为参数，并返回对应的时间戳。在函数中，我们首先构造了一个`std::tm`结构体对象`timeinfo`，并将年、月、日赋值给相应的成员变量。然后，我们使用`std::mktime`函数将`timeinfo`转换为时间戳。
+
+在`main`函数中，我们通过用户输入获取年、月、日，并调用`getTimestamp`函数来获取时间戳，然后将其打印出来。
+
+请注意，这个示例假设用户输入的年、月、日是有效的，并且是按照日历中的约定进行输入的。在实际应用中，你可能需要添加输入验证和错误处理来确保输入的正确性。
+
+希望以上信息能对你有所帮助。如有任何进一步的疑问，请随时提问。
+
+---
+
+## C++11 读写锁
+
+C++11引入了读写锁（Read-Write Lock），它是一种特殊的锁机制，允许多个线程同时读取共享数据，但在写入数据时需要互斥保护。读写锁可以提高并发性能，特别适用于读操作远远超过写操作的情况。C++11中的读写锁由`std::shared_mutex`类实现。
+
+以下是使用C++11中的读写锁的基本操作：
+
+1. 创建读写锁对象：在需要使用读写锁的地方，创建一个`std::shared_mutex`对象。
+
+   ```cpp
+   std::shared_mutex rwMutex;
+   ```
+
+2. 读操作使用共享锁（Shared Lock）：当需要对共享数据进行读操作时，使用`std::shared_lock`对象上锁。
+
+   ```cpp
+   std::shared_lock<std::shared_mutex> lock(rwMutex);
+
+   // 读取共享数据的代码
+   ```
+
+   共享锁允许多个线程同时持有锁，并发读取共享数据。多个读操作可以同时进行，互不干扰。
+
+3. 写操作使用独占锁（Exclusive Lock）：当需要对共享数据进行写操作时，使用`std::unique_lock`对象上锁。
+
+   ```cpp
+   std::unique_lock<std::shared_mutex> lock(rwMutex);
+
+   // 写入共享数据的代码
+   ```
+
+   独占锁只允许一个线程持有锁，其他线程需要等待锁释放才能进行写操作。
+
+4. 解锁：使用`unlock`函数解锁读写锁。
+
+   ```cpp
+   lock.unlock();
+   ```
+
+   或者，`std::shared_lock`和`std::unique_lock`对象的析构函数会在作用域结束时自动释放锁。
+
+读写锁的使用示例：
+
+```cpp
+#include <iostream>
+#include <thread>
+#include <shared_mutex>
+
+std::shared_mutex rwMutex;
+int sharedData = 0;
+
+void reader()
+{
+    std::shared_lock<std::shared_mutex> lock(rwMutex);
+
+    // 读取共享数据
+    std::cout << "Reader: Shared data = " << sharedData << std::endl;
+}
+
+void writer()
+{
+    std::unique_lock<std::shared_mutex> lock(rwMutex);
+
+    // 写入共享数据
+    sharedData++;
+
+    std::cout << "Writer: Shared data incremented to " << sharedData << std::endl;
+}
+
+int main()
+{
+    std::thread t1(reader);
+    std::thread t2(writer);
+    std::thread t3(reader);
+
+    t1.join();
+    t2.join();
+    t3.join();
+
+    return 0;
+}
+```
+
+在上述示例中，`reader`函数表示读操作，`writer`函数表示写操作。读操作使用共享锁，写操作使用独占锁。在`main`函数中，我们创建了一个读线程和两个写线程，它们并发访问共享数据。
+
+通过使用读写锁，我们可以实现读操作的并发性，而保证写操作的互斥性。这样可以提高多线程环境下的性能。
+
+希望以上信息对你有所帮助。如有进一步的疑问，请随时提问。
+
+---
+
+## 告警时间间隔 业务逻辑
+
+当涉及业务告警时间间隔时，实际的实现方式将取决于具体的业务需求和应用场景。下面提供一个示例来详细解释如何在C++中实现业务告警时间间隔。
+
+假设我们有一个简单的业务场景：在某个服务的请求处理过程中，如果出现异常情况，我们希望以一定的时间间隔触发告警。以下是一个基本的示例代码：
+
+```cpp
+#include <iostream>
+#include <chrono>
+#include <ctime>
+#include <thread>
+
+const int ALERT_INTERVAL_SECONDS = 60;  // 告警时间间隔为60秒
+std::time_t lastAlertTime = 0;  // 上次告警时间的初始值为0
+
+void processRequest()
+{
+    // 模拟请求处理过程
+    bool hasError = true;  // 假设出现异常情况
+
+    if (hasError)
+    {
+        std::time_t currentTime = std::time(nullptr);  // 获取当前时间
+        if (currentTime - lastAlertTime > ALERT_INTERVAL_SECONDS)
+        {
+            // 满足告警条件，进行告警操作
+            std::cout << "Alert: An error occurred!" << std::endl;
+
+            // 更新上次告警时间为当前时间
+            lastAlertTime = currentTime;
+        }
+    }
+}
+
+int main()
+{
+    while (true)
+    {
+        processRequest();
+
+        // 暂停一段时间
+        std::this_thread::sleep_for(std::chrono::seconds(1));
+    }
+
+    return 0;
+}
+```
+
+在上述示例中，`processRequest`函数表示请求处理过程，如果出现异常情况（这里通过`hasError`来模拟），则判断距离上次告警时间是否大于告警时间间隔。如果大于间隔，则触发告警操作，并更新上次告警时间为当前时间。
+
+在`main`函数中，我们通过一个无限循环来模拟持续的请求处理过程。在每次循环中，我们调用`processRequest`函数处理请求，并在每次处理之间暂停一段时间（这里使用`std::this_thread::sleep_for`函数暂停1秒）。
+
+该示例中的告警时间间隔为60秒，如果在60秒内连续出现异常情况，将只触发一次告警操作。
+
+请注意，这只是一个基本的示例来说明如何实现业务告警时间间隔，实际中你可能需要根据具体的业务需求进行调整和优化。例如，你可以将告警操作封装为一个函数，结合日志记录和通知机制，以满足实际的告警需求。
+
+希望以上示例能够帮助你理解在C++中实现业务告警时间间隔的过程。如有进一步的疑问，请随时提问。
+
+---
+
+## std::mutex 同一个对象 锁定多个临界区 会有冲突吗
+
+在C++11中，`std::mutex`是可重入的，也就是说，同一个线程可以多次对同一个`std::mutex`对象进行上锁操作，而不会发生冲突。这是因为`std::mutex`会跟踪上锁的次数，只有对应数量的解锁操作执行后，其他线程才能获得该互斥量的锁。
+
+下面是一个示例来说明同一个对象锁定多个临界区不会发生冲突的情况：
+
+```cpp
+#include <iostream>
+#include <mutex>
+#include <thread>
+
+std::mutex mtx;
+
+void criticalSection()
+{
+    mtx.lock();
+    std::cout << "Enter critical section." << std::endl;
+
+    // 执行一些需要保护的操作...
+
+    mtx.unlock();
+    std::cout << "Exit critical section." << std::endl;
+}
+
+int main()
+{
+    std::thread t1(criticalSection);
+    std::thread t2(criticalSection);
+
+    t1.join();
+    t2.join();
+
+    return 0;
+}
+```
+
+在上面的示例中，两个线程`t1`和`t2`都调用了`criticalSection`函数，该函数内部对同一个`std::mutex`对象`mtx`进行了上锁和解锁操作。由于`std::mutex`是可重入的，所以同一个线程可以多次对其进行上锁操作，而不会产生冲突。
+
+重要的是要注意，虽然同一个对象可以锁定多个临界区，但仍然需要确保在每个临界区的结束处进行相应数量的解锁操作，以保持互斥量的正确状态。否则，未解锁的临界区可能会导致死锁或其他并发错误。
+
+希望这个解答能够帮助你理解在C++11中使用`std::mutex`锁定多个临界区的情况。如有任何进一步的疑问，请随时提问。
+
+---
+
 ## gprof 性能分析 程序剖析
 
 在Linux环境下，使用gprof进行C++程序的性能分析与使用方法类似于前面提到的通用gprof用法。下面是关于在Linux中使用gprof进行C++程序性能分析的详细解释：
