--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -2,6 +2,115 @@
 
 + 常用函数，大部分为C++函数
 
+## prctl
+
++ 简介：
+  + prctl() 是一个 Linux 系统调用函数，用于控制进程的各种属性和行为。它可以用于获取和修改进程的运行时属性，包括名称、资源限制、父子关系、信号处理等
+
++ 原型：
+```cpp
+#include <sys/prctl.h>
+
+int prctl(int option, unsigned long arg2, unsigned long arg3, unsigned long arg4, unsigned long arg5);
+```
+
++ 参数：
+  + prctl() 函数的第一个参数 option 用于指定要执行的操作
+  + 后面的参数 arg2、arg3、arg4、arg5 则是与特定操作相关的参数。
+
++ 详解：
+  + PR_SET_NAME：设置进程名称。
+  + PR_GET_NAME：获取进程名称。
+  + PR_SET_PDEATHSIG：设置子进程在父进程终止时接收的信号。
+  + PR_SET_CHILD_SUBREAPER：设置进程为子进程的子进程收割器。
+  + PR_GET_CHILD_SUBREAPER：检查进程是否是子进程的子进程收割器
+
++ 示例：
+```cpp
+#include <sys/prctl.h>
+#include <iostream>
+#include <cstring>
+
+int main()
+{
+    const char* processName = "MyProcess";
+
+    if (prctl(PR_SET_NAME, reinterpret_cast<unsigned long>(processName), 0, 0, 0) != 0)
+    {
+        std::cerr << "Failed to set process name" << std::endl;
+        return 1;
+    }
+
+    char buffer[16];
+    if (prctl(PR_GET_NAME, reinterpret_cast<unsigned long>(buffer), 0, 0, 0) != 0)
+    {
+        std::cerr << "Failed to get process name" << std::endl;
+        return 1;
+    }
+
+    std::cout << "Process name: " << buffer << std::endl;
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，我们首先使用 prctl() 函数将进程的名称设置为 "MyProcess"。然后，我们使用 prctl() 函数的 PR_GET_NAME 参数获取进程的名称，并将其输出到控制台
+  + 需要注意的是，prctl() 函数的具体操作和参数在不同的操作系统版本和架构上可能会有所不同。因此，在使用 prctl() 函数时，建议参考相关的文档和系统头文件以了解特定操作和参数的正确使用方式
+
+## pthread_setname_np 
+
++ 简介：
+  + pthread_setname_np() 是一个非标准的 POSIX 函数，用于设置 POSIX 线程的名称。它允许你为线程分配一个描述性的名称，以便在调试和跟踪应用程序时更容易地识别不同的线程
+
++ 原型：
+```cpp
+#include <pthread.h>
+
+int pthread_setname_np(pthread_t thread, const char *name);
+```
+
++ 参数：
+  + pthread_setname_np() 函数的第一个参数是要设置名称的线程标识符 thread
+  + 第二个参数是要分配给线程的名称字符串 name
+
++ 示例：
+```cpp
+#include <pthread.h>
+#include <iostream>
+
+void* threadFunction(void*)
+{
+    // 线程执行的任务
+
+    return nullptr;
+}
+
+int main()
+{
+    pthread_t thread;
+    const char* threadName = "MyThread";
+
+    // 创建线程
+    pthread_create(&thread, nullptr, threadFunction, nullptr);
+
+    // 设置线程名称
+    pthread_setname_np(thread, threadName);
+
+    // 主线程执行的任务
+
+    // 等待线程结束
+    pthread_join(thread, nullptr);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，我们首先创建了一个线程 thread，然后使用 pthread_setname_np() 函数将其名称设置为 "MyThread"。
+  + 需要注意的是，pthread_setname_np() 函数是非标准的，它可能在不同的操作系统和实现中有所差异。在某些平台上，可能需要添加一些特定的宏定义或包含其他头文件来使用该函数。
+  + 此外，pthread_setname_np() 函数仅用于 POSIX 线程，不能用于其他类型的线程，如 Windows 线程
+
 ## clock_nanosleep
 
 + 简介：
