--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,52 @@
 
 + C++ 相关的理论基础知识
 
+## sqlpp11 详解
+
+sqlpp11 是一个 C++ 编程库，提供了一种类型安全的 SQL 查询构建和执行方式。它使用 C++ 的强类型系统和模板元编程技术，允许开发者以类型安全的方式构建 SQL 查询，同时提供了对多种关系型数据库的支持。
+
+以下是关于 sqlpp11 的一些详细说明：
+
+**1. 类型安全的 SQL 查询构建：** sqlpp11 允许开发者使用 C++ 类型和表达式来构建 SQL 查询，这种方式可以在编译时捕获错误和类型不匹配，并提供更好的代码安全性和可维护性。
+
+**2. 支持多种关系型数据库：** sqlpp11 支持多种常见的关系型数据库，如 MySQL、PostgreSQL、SQLite 和 Microsoft SQL Server 等，使开发者可以使用相同的接口和查询语法来操作不同的数据库系统。
+
+**3. 查询表达式和条件：** sqlpp11 提供了丰富的查询表达式和条件，包括等于、不等于、小于、大于、逻辑运算符等，以及通用函数和聚合函数等，使开发者可以构建复杂的查询条件和数据转换。
+
+**4. 插入、更新和删除数据：** sqlpp11 提供了方便的接口和语法来执行插入、更新和删除数据的操作，使开发者可以通过简单的代码调用来完成数据库操作。
+
+**5. 事务支持：** sqlpp11 支持数据库事务的操作，允许开发者在事务中执行一系列的数据库操作，并保证数据的一致性和完整性。
+
+**6. 数据库迁移支持：** sqlpp11 提供了数据库迁移的支持，允许开发者定义数据库表结构的变化和版本控制，以方便数据库结构的升级和维护。
+
+使用 sqlpp11，开发者可以在 C++ 程序中以一种类型安全的方式构建和执行 SQL 查询，而无需手动编写 SQL 语句。这样可以减少错误和调试的工作量，提高代码的可读性和可维护性。然而，使用 sqlpp11 仍然需要对关系型数据库和 SQL 语法有一定的了解，以便正确地构建查询和操作数据库。
+
+---
+
+## ORM 是什么
+
+ORM 是对象关系映射（Object-Relational Mapping）的缩写，它是一种编程技术或模式，用于在关系型数据库和面向对象编程语言之间建立映射关系。ORM 提供了一种将数据库中的数据映射为编程语言中的对象的方法，同时也允许开发者通过操作对象来操作数据库，而不必直接编写 SQL 查询语句。
+
+ORM 的主要目标是简化数据库操作和数据持久化的过程，以提高开发效率和代码的可维护性。它使开发者可以使用面向对象的方式处理数据，而无需关注数据库的细节和复杂的 SQL 语法。
+
+ORM 通常提供以下功能和特性：
+
+1. 对象和表之间的映射：ORM 将数据库中的表和记录映射为编程语言中的对象和属性，使开发者可以通过操作对象来进行数据库操作。
+
+2. 数据库查询和操作：ORM 提供了一组方法和接口，用于执行数据库查询、插入、更新和删除等操作，隐藏了底层数据库操作的复杂性。
+
+3. 数据关系处理：ORM 可以处理对象之间的关系，如一对一、一对多和多对多关系，并提供方便的方法来处理这些关系。
+
+4. 数据校验和验证：ORM 提供了验证规则和约束，用于验证对象数据的完整性和有效性，确保数据的一致性和准确性。
+
+5. 数据库迁移和版本管理：ORM 通常提供数据库迁移工具，用于管理数据库结构的变化和版本控制。
+
+ORM 在不同的编程语言和框架中有多种实现，如在 Python 中有 SQLAlchemy、Django ORM；在 Java 中有 Hibernate、MyBatis；在 .NET 中有 Entity Framework 等。
+
+ORM 可以简化开发人员与数据库之间的交互，减少了手动编写 SQL 语句的工作量，提高了开发效率。然而，在使用 ORM 时，仍然需要了解数据库的基本概念和 SQL 查询语句，以便理解和优化生成的查询语句，以及处理复杂的数据库操作。
+
+---
+
 ## 1970年1月1日以来的时间戳称为什么时间
 
 在计算机科学中，1970年1月1日以来的时间戳被称为UNIX时间戳（Unix Timestamp），也称为Epoch时间。
