--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,179 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## unix C++ 捕获信号
+
+在 UNIX 系统中，可以使用 C++ 来捕获和处理信号。下面是一个示例代码，演示如何在 C++ 中捕获信号：
+
+```cpp
+#include <iostream>
+#include <csignal>
+
+// 信号处理函数
+void signalHandler(int signal)
+{
+    std::cout << "Received signal: " << signal << std::endl;
+    
+    // 进行信号处理操作
+    
+    // 可以选择在这里终止程序
+    // exit(0);
+}
+
+int main()
+{
+    // 注册信号处理函数
+    std::signal(SIGINT, signalHandler);  // 捕获 Ctrl+C 信号
+    
+    // 主循环或其他业务逻辑
+    while (true)
+    {
+        // 执行任务
+    }
+    
+    return 0;
+}
+```
+
+在上面的示例中，我们定义了一个名为 `signalHandler` 的函数作为信号处理函数。该函数会在接收到指定的信号时被调用。在 `main` 函数中，我们使用 `std::signal` 函数注册了 `signalHandler` 函数来捕获 `SIGINT` 信号，即 Ctrl+C 信号。
+
+当程序运行时，如果收到 `SIGINT` 信号（通过按下 Ctrl+C），将会触发信号处理函数 `signalHandler`，并在控制台输出收到的信号编号。
+
+你可以根据需要注册其他信号和处理函数，例如 `SIGTERM`（终止信号）等。
+
+需要注意的是，信号处理是特定于操作系统的，并且在不同的操作系统上可能有所不同。因此，确保在目标系统上查阅相关文档以了解特定信号的定义和处理方式。
+
+希望这个示例对你有帮助！如有需要，请随时提问。
+
+---
+
+## C++11 操作符重载
+
+在C++11中，可以通过成员函数或非成员函数的方式重载运算符。下面是一些常见的运算符重载示例：
+
+**1. 算术运算符**
+```cpp
+#include <iostream>
+
+class Number {
+private:
+    int value;
+
+public:
+    Number(int val) : value(val) {}
+
+    // 重载加法运算符
+    Number operator+(const Number& other) const {
+        return Number(value + other.value);
+    }
+};
+
+int main() {
+    Number num1(5);
+    Number num2(10);
+    Number result = num1 + num2;  // 使用重载的加法运算符
+
+    std::cout << result.value << std::endl;  // 输出结果: 15
+
+    return 0;
+}
+```
+
+**2. 关系运算符**
+```cpp
+#include <iostream>
+
+class Number {
+private:
+    int value;
+
+public:
+    Number(int val) : value(val) {}
+
+    // 重载相等运算符
+    bool operator==(const Number& other) const {
+        return value == other.value;
+    }
+};
+
+int main() {
+    Number num1(5);
+    Number num2(10);
+
+    if (num1 == num2) {  // 使用重载的相等运算符
+        std::cout << "相等" << std::endl;
+    } else {
+        std::cout << "不相等" << std::endl;  // 输出结果: 不相等
+    }
+
+    return 0;
+}
+```
+
+**3. 输入/输出流运算符**
+```cpp
+#include <iostream>
+#include <string>
+
+class Person {
+private:
+    std::string name;
+
+public:
+    Person(const std::string& n) : name(n) {}
+
+    // 重载输出流运算符
+    friend std::ostream& operator<<(std::ostream& os, const Person& person) {
+        os << "姓名: " << person.name;
+        return os;
+    }
+};
+
+int main() {
+    Person p("张三");
+
+    std::cout << p << std::endl;  // 使用重载的输出流运算符输出对象信息
+
+    return 0;
+}
+```
+
+**4. 下标运算符**
+```cpp
+#include <iostream>
+
+class Array {
+private:
+    int data[5];
+
+public:
+    Array() {
+        for (int i = 0; i < 5; ++i) {
+            data[i] = i + 1;
+        }
+    }
+
+    // 重载下标运算符
+    int& operator[](int index) {
+        return data[index];
+    }
+};
+
+int main() {
+    Array arr;
+    std::cout << arr[2] << std::endl;  // 输出结果: 3
+
+    arr[3] = 8;  // 修改元素的值
+    std::cout << arr[3] << std::endl;  // 输出结果: 8
+
+    return 0;
+}
+```
+
+这只是一小部分运算符重载的示例，你可以根据需要重载其他运算符，以满足特定的编程需求。请注意，运算符重载应遵循适当的语义和约定，以确保代码的可读性和一致性。
+
+---
+
 ## C++11 年月日换算成秒
 
 要将给定的年、月、日转换为时间戳（Unix时间戳），可以使用C++11中的`std::chrono`库进行操作。下面是一个示例代码，它将输入的年、月、日转换为时间戳：
