--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,173 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## std::map erase() 详解
+
+`std::map` 是 C++ 标准库中的关联容器之一，它提供了一种键值对的映射关系。`std::map` 中的元素按照键的顺序进行排序，并且每个键只能出现一次。
+
+`std::map` 提供了 `erase()` 成员函数，用于删除指定的元素或一定范围内的元素。`erase()` 的使用方式有以下几种形式：
+
+1. 删除单个元素：
+   ```cpp
+   iterator erase(iterator pos);
+   ```
+   这种形式的 `erase()` 接受一个迭代器 `pos`，它指向要删除的元素，并返回一个指向下一个元素的迭代器。
+
+2. 删除指定键的元素：
+   ```cpp
+   size_type erase(const key_type& key);
+   ```
+   这种形式的 `erase()` 接受一个键 `key`，它指定要删除的元素的键，并返回删除的元素数量（0 或 1）。
+
+3. 删除指定范围的元素：
+   ```cpp
+   iterator erase(iterator first, iterator last);
+   ```
+   这种形式的 `erase()` 接受两个迭代器 `first` 和 `last`，它们指定要删除的元素范围（包括 `first`，不包括 `last`），并返回一个指向下一个元素的迭代器。
+
+下面是一个使用 `erase()` 的示例：
+
+```cpp
+#include <iostream>
+#include <map>
+
+int main() {
+    std::map<int, std::string> map;
+
+    map[1] = "One";
+    map[2] = "Two";
+    map[3] = "Three";
+    map[4] = "Four";
+
+    // 删除指定键的元素
+    map.erase(2);
+
+    // 删除范围内的元素
+    auto it = map.find(3);
+    if (it != map.end()) {
+        map.erase(it, map.end());
+    }
+
+    // 输出剩余的元素
+    for (const auto& pair : map) {
+        std::cout << pair.first << ": " << pair.second << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在上述示例中，我们创建了一个 `std::map` 对象，并插入了一些键值对。然后使用 `erase()` 删除了键为 2 的元素，以及从键为 3 的元素开始的所有元素。最后，我们遍历剩余的元素并进行输出。
+
+需要注意的是，当使用 `erase()` 删除元素时，`std::map` 中的迭代器会失效。所以在删除后继续使用已失效的迭代器是不安全的。
+
+希望这个解释对你有帮助！如有需要，请随时提问。
+
+---
+
+## std:;map erase() std::remove_if() 
+
+`std::remove_if()` 是 C++ 标准库中的一个算法函数，用于从容器中移除满足指定条件的元素。然而，对于关联容器 `std::map` 来说，它的元素是按照键的顺序进行排序的，并且每个键只能出现一次，因此无法直接使用 `std::remove_if()` 函数来删除 `std::map` 中的元素。
+
+要删除 `std::map` 中满足条件的元素，可以使用以下步骤：
+
+1. 使用迭代器遍历 `std::map`。
+2. 根据条件判断，将要删除的元素的键记录下来。
+3. 使用 `std::map` 的成员函数 `erase()` 删除记录的键对应的元素。
+
+下面是一个示例代码，演示如何使用 `std::remove_if()` 删除 `std::map` 中的满足条件的元素：
+
+```cpp
+#include <iostream>
+#include <map>
+#include <algorithm>
+
+int main() {
+    std::map<int, std::string> myMap;
+    myMap[1] = "One";
+    myMap[2] = "Two";
+    myMap[3] = "Three";
+    myMap[4] = "Four";
+    myMap[5] = "Five";
+
+    // 定义要删除的元素的条件
+    auto isEvenKey = [](const std::pair<int, std::string>& pair) { return pair.first % 2 == 0; };
+
+    // 记录要删除的键
+    std::vector<int> keysToRemove;
+    for (auto it = myMap.begin(); it != myMap.end(); ++it) {
+        if (isEvenKey(*it)) {
+            keysToRemove.push_back(it->first);
+        }
+    }
+
+    // 删除记录的键对应的元素
+    for (const auto& key : keysToRemove) {
+        myMap.erase(key);
+    }
+
+    // 输出结果
+    for (const auto& pair : myMap) {
+        std::cout << pair.first << ": " << pair.second << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在示例中，我们定义了一个一元谓词 `isEvenKey`，用于判断键是否为偶数。然后，使用迭代器遍历 `std::map`，记录满足条件的键到 `keysToRemove` 容器中。最后，使用 `erase()` 函数删除 `keysToRemove` 容器中记录的键对应的元素。
+
+需要注意的是，`std::remove_if()` 并不适用于 `std::map`，因为它无法处理关联容器的特殊性质。因此，我们需要手动遍历 `std::map`，判断条件并删除元素。
+
+希望这个解释对你有帮助！如有需要，请随时提问。
+
+---
+
+## std::map erase() 删除元素后 迭代器失效
+
+在使用 `erase()` 函数删除元素后，原来的迭代器会失效，因为元素已经被删除，迭代器指向的位置不再有效。如果你需要在删除元素后继续遍历 `std::map`，有几种方法可以解决迭代器失效的问题：
+
+1. 使用返回的迭代器：
+   `erase()` 函数返回一个指向下一个元素的迭代器。你可以将这个返回的迭代器用作下一次迭代的起始位置。
+
+   ```cpp
+   auto it = map.find(key);
+   if (it != map.end()) {
+       it = map.erase(it);  // 删除元素并更新迭代器
+   }
+   ```
+
+   这样，即使在删除元素后，你仍然拥有一个有效的迭代器来继续遍历。
+
+2. 使用后置递增运算符：
+   后置递增运算符 `++` 可以使迭代器指向下一个元素，因此你可以在删除元素之前复制迭代器，然后再删除元素。
+
+   ```cpp
+   for (auto it = map.begin(); it != map.end(); ) {
+       auto current = it++;
+       if (/* 满足删除条件 */) {
+           map.erase(current);
+       }
+   }
+   ```
+
+   这种方式可以确保在删除元素之前获得下一个有效的迭代器。
+
+3. 使用标准算法：
+   你也可以使用标准库中的算法来删除满足条件的元素，而不使用 `erase()` 函数。例如，可以使用 `std::remove_if` 结合 `std::map` 的成员函数 `erase()` 进行元素删除。
+
+   ```cpp
+   map.erase(std::remove_if(map.begin(), map.end(), /* 删除条件 */), map.end());
+   ```
+
+   这种方式会在不失效迭代器的情况下删除元素。
+
+无论你选择哪种方法，都需要确保在删除元素后不再使用失效的迭代器。另外，如果你在遍历 `std::map` 的过程中需要频繁地删除元素，考虑使用 `std::unordered_map`（无序映射）来避免迭代器失效的问题。
+
+希望这些解决方案对你有帮助！如有需要，请随时提问。
+
+---
+
 ## unix C++ 捕获信号
 
 在 UNIX 系统中，可以使用 C++ 来捕获和处理信号。下面是一个示例代码，演示如何在 C++ 中捕获信号：
