--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,40 @@
 
 + C++ 相关的理论基础知识
 
+## 强关联 是什么
+
+"强关联"（Strong Association）是面向对象编程（OOP）中的一个概念，指的是两个或多个类之间的关系非常紧密，彼此之间的依赖性很强。
+
+在强关联关系中，一个类通常直接使用另一个类的成员变量或方法，或者一个类继承自另一个类。这意味着两个类之间的交互非常频繁和紧密，一个类的变化可能会直接影响到另一个类。
+
+强关联关系通常表示了一种较强的功能或逻辑上的依赖关系。这种关系可能是必需的，因为一个类的功能需要另一个类提供的支持或协助。然而，强关联关系也可能会导致较高的耦合性，从而使代码的可维护性和可扩展性受到一定影响。
+
+与强关联相对的概念是弱关联（Weak Association），指的是两个类之间的依赖性较弱，彼此之间的交互相对较少或较松散。在弱关联关系中，一个类可能通过参数传递、接口或消息传递等方式与另一个类进行交互，而不是直接访问其成员变量或方法。
+
+理解类之间的关联类型对于设计和编写高质量的面向对象代码非常重要。在软件开发中，要根据具体的需求和设计目标，合理选择和管理类之间的关联关系，以确保代码的可读性、可维护性和可扩展性。
+
+---
+
+## 队列 应用场景
+
+C++队列（Queue）是一种先进先出（FIFO）的数据结构，它支持在一端插入元素（入队），在另一端删除元素（出队）。队列在许多应用场景中非常有用，以下是一些常见的应用场景：
+
+1. 任务调度：队列可以用于任务调度，其中待处理的任务按照其到达时间的顺序排队。每当一个任务完成，可以从队列的前端移除任务，然后处理下一个任务。
+
+2. 缓冲区管理：队列可用于缓冲区管理，其中生产者将数据插入队列的末尾，而消费者从队列的前端取出数据进行处理。这样可以平衡生产者和消费者之间的速度差异。
+
+3. 广度优先搜索：队列常用于广度优先搜索算法（BFS），该算法在图或树结构中逐层扩展搜索。每当从队列的前端取出一个元素时，将其相邻的未访问节点插入队列的末尾，以便在下一层进行进一步的搜索。
+
+4. 消息传递：队列可用于在不同的线程或进程之间传递消息。一个线程将消息插入队列的末尾，而另一个线程从队列的前端取出消息并进行处理。
+
+5. 系统调度：操作系统中的任务调度器通常使用队列来管理进程的执行顺序。进程按照优先级或其他调度策略排队等待执行。
+
+6. 打印任务队列：在打印机管理中，队列可以用于存储待打印的文档。每当一个文档完成打印，下一个文档可以从队列的前端取出。
+
+这些只是一些队列的应用场景示例，实际上队列在许多领域中都有广泛的应用。队列提供了一种有序的数据处理方式，可以有效地管理和处理数据流。
+
+---
+
 ## sqlpp11 详解
 
 sqlpp11 是一个 C++ 编程库，提供了一种类型安全的 SQL 查询构建和执行方式。它使用 C++ 的强类型系统和模板元编程技术，允许开发者以类型安全的方式构建 SQL 查询，同时提供了对多种关系型数据库的支持。
