--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -2,6 +2,158 @@
 
 + 常用函数，大部分为C++函数
 
+## std::remove 
+
++ 简介：
+  + C++11中的std::remove函数属于标准库的文件操作函数，用于删除指定的文件
+
++ 原型：
+```cpp
+int remove(const char* filename);
+```
+
++ 参数：
+  + filename：要删除的文件的路径（C风格的字符串）
+
++ 返回值：
+  + 如果文件成功删除，则返回0。
+  + 如果删除文件失败，则返回非零值
+
++ 详解：
+  + std::remove函数用于删除指定的文件。它将指定的文件路径作为参数，并尝试将文件从文件系统中永久删除。如果文件删除成功，返回值为0，否则返回非零值
+  + std::remove函数不会将文件移动到回收站，而是直接从文件系统中删除文件
+  + 如果要删除的文件不存在或无法删除，则会返回非零值，可以通过检查返回值来判断删除操作是否成功
+
++ 示例：
+```cpp
+#include <iostream>
+#include <cstdio>
+
+int main() {
+    const char* filename = "/path/to/file.txt"; // 指定文件路径
+
+    if (std::remove(filename) != 0) {
+        std::cerr << "Failed to delete file: " << filename << std::endl;
+    } else {
+        std::cout << "File deleted: " << filename << std::endl;
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们使用std::remove函数来删除指定路径的文件。我们传递要删除的文件路径作为参数，并检查返回值是否为0来确定是否删除成功
+  + 请注意，std::remove函数只能删除文件，不能删除目录。如果要删除目录及其内容，您可以使用其他方法，例如递归删除目录中的所有文件，然后再删除空的目录
+
+---
+
+## statvfs
+
++ 简介：
+  + statvfs() 是一个Linux系统调用函数，用于获取文件系统的相关信息
+
++ 原型：
+```cpp
+int statvfs(const char *path, struct statvfs *buf);
+```
+
++ 参数：
+  + statvfs() 函数接受两个参数：path 是文件系统路径名，buf 是指向 struct statvfs 结构的指针，用于存储文件系统信息
+
++ 详解：
+  + struct statvfs 结构包含了多个字段，提供了关于文件系统的各种属性。下面是 struct statvfs 的定义：
+```cpp
+struct statvfs {
+    unsigned long f_bsize;    /* 文件系统块大小 */
+    unsigned long f_frsize;   /* 文件系统的基本块大小 */
+    fsblkcnt_t    f_blocks;   /* 文件系统总块数 */
+    fsblkcnt_t    f_bfree;    /* 文件系统空闲块数 */
+    fsblkcnt_t    f_bavail;   /* 非超级用户可用块数 */
+    fsfilcnt_t    f_files;    /* 文件系统节点数 */
+    fsfilcnt_t    f_ffree;    /* 文件系统空闲节点数 */
+    fsfilcnt_t    f_favail;   /* 非超级用户可用节点数 */
+    unsigned long f_fsid;     /* 文件系统标识符 */
+    unsigned long f_flag;     /* 挂载标志 */
+    unsigned long f_namemax;  /* 最大文件名长度 */
+};
+```
+
++ 常用字段解释：
+  + f_bsize：文件系统块的大小（字节）
+  + f_frsize：文件系统的基本块大小（字节）
+  + f_blocks：文件系统的总块数
+  + f_bfree：文件系统的空闲块数
+  + f_bavail：非超级用户可用的块数
+  + f_files：文件系统的节点（文件）数
+  + f_ffree：文件系统的空闲节点数
+  + f_favail：非超级用户可用的节点数
+  + f_fsid：文件系统标识符
+  + f_flag：文件系统的挂载标志
+  + f_namemax：文件系统支持的最大文件名长度
+
++ 详解：
+  + 通过调用 statvfs() 函数并传递文件系统路径名和一个 struct statvfs 结构指针，可以获取与指定文件系统相关的各种信息。如果函数调用成功，返回值为 0，否则返回值为 -1，表示失败。在失败的情况下，可以使用 errno 来获取具体的错误码
+  + 使用 statvfs() 函数，您可以获取文件系统的块大小、总空间、可用空间、文件节点数等信息，以便进行磁盘空间管理和监控等操作
+
+
+## sysinfo 
+
++ 简介：
+  + sysinfo() 函数是一个系统调用，用于获取关于系统整体状态的信息，包括内存使用情况、负载信息、运行时间等。它位于 <sys/sysinfo.h> 头文件中
+
++ 原型：
+```cpp
+int sysinfo(struct sysinfo *info);
+```
+
++ 详解：
+  + 该函数接受一个指向 sysinfo 结构的指针作为参数，并将系统信息填充到该结构中。sysinfo 结构定义如下
+```cpp
+struct sysinfo {
+    long uptime;             // 系统运行时间
+    unsigned long loads[3];  // 1分钟、5分钟、15分钟的负载平均值
+    unsigned long totalram;  // 总内存大小（字节）
+    unsigned long freeram;   // 可用内存大小（字节）
+    unsigned long sharedram; // 共享内存大小（字节）
+    unsigned long bufferram; // 缓冲区大小（字节）
+    unsigned long totalswap; // 总交换空间大小（字节）
+    unsigned long freeswap;  // 可用交换空间大小（字节）
+    unsigned short procs;    // 进程数量
+    char _f[22];             // 保留字段，不使用
+};
+```
+
++ 返回值：
+  + sysinfo() 函数将系统的状态信息填充到传入的 sysinfo 结构中，然后返回 0 表示成功，-1 表示失败
+
++ 详解-2：
+  + 通过调用 sysinfo() 函数并传入一个 sysinfo 结构的指针，可以获取系统的各种信息，如系统运行时间、负载平均值、内存使用情况等。在获取内存信息时，可以使用 totalram 字段获取总内存大小，freeram 字段获取可用内存大小
+
++ 示例：
+```cpp
+#include <sys/sysinfo.h>
+#include <iostream>
+
+int main() {
+    struct sysinfo sys_info;
+    if (sysinfo(&sys_info) != -1) {
+        unsigned long total_memory = sys_info.totalram;
+        unsigned long free_memory = sys_info.freeram;
+        
+        std::cout << "Total Memory: " << total_memory << std::endl;
+        std::cout << "Free Memory: " << free_memory << std::endl;
+    } else {
+        std::cerr << "Failed to retrieve system memory information." << std::endl;
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 请注意，sysinfo() 函数返回的内存大小是以字节为单位的整数值。如果需要以更友好的方式显示内存大小（如以MB或GB为单位），可以进行相应的单位转换操作。
+
 ## prctl
 
 + 简介：
