--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,193 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## rmdir 删除目录失败
+
+如果在使用C++的`rmdir()`函数时删除目录失败，可能是由于以下原因之一：
+
+1. 权限问题：确保您的程序有足够的权限来删除目录。删除目录需要具有对目录及其上级目录的写权限。您可以使用`chmod`命令来修改目录的权限。
+
+2. 目录非空：`rmdir()`函数只能删除空目录。如果目录中包含文件或其他子目录，`rmdir()`将失败。在删除目录之前，您需要确保目录为空。您可以使用递归方式删除目录中的所有文件和子目录，然后再尝试使用`rmdir()`删除空目录。
+
+下面是一个示例代码，演示了如何使用递归方式删除目录及其内容：
+
+```cpp
+#include <iostream>
+#include <unistd.h>
+#include <sys/stat.h>
+#include <dirent.h>
+
+bool removeDirectory(const std::string& directoryPath) {
+    DIR* dir = opendir(directoryPath.c_str());
+    if (!dir) {
+        std::cerr << "Failed to open directory: " << directoryPath << std::endl;
+        return false;
+    }
+
+    struct dirent* entry;
+    while ((entry = readdir(dir))) {
+        std::string fileName = entry->d_name;
+        if (fileName != "." && fileName != "..") {
+            std::string filePath = directoryPath + "/" + fileName;
+
+            if (entry->d_type == DT_DIR) {
+                if (!removeDirectory(filePath)) {
+                    closedir(dir);
+                    return false;
+                }
+            } else {
+                if (unlink(filePath.c_str()) != 0) {
+                    std::cerr << "Failed to delete file: " << filePath << std::endl;
+                    closedir(dir);
+                    return false;
+                }
+            }
+        }
+    }
+
+    closedir(dir);
+
+    if (rmdir(directoryPath.c_str()) != 0) {
+        std::cerr << "Failed to delete directory: " << directoryPath << std::endl;
+        return false;
+    }
+
+    return true;
+}
+
+int main() {
+    const std::string directoryPath = "/path/to/directory";
+
+    if (removeDirectory(directoryPath)) {
+        std::cout << "Directory deleted: " << directoryPath << std::endl;
+    } else {
+        std::cerr << "Failed to delete directory: " << directoryPath << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在上述示例中，我们定义了一个`removeDirectory()`函数，使用递归方式删除目录及其内容。函数首先打开目录，然后遍历目录中的每个条目。对于每个条目，如果是子目录，则递归调用`removeDirectory()`函数来删除子目录及其内容；如果是文件，则使用`unlink()`函数删除文件。最后，使用`rmdir()`函数删除空目录。
+
+请注意，上述代码只是一个示例，您可能需要根据实际情况进行修改和调整。
+
+希望以上信息能够帮助您解决删除目录失败的问题。如有其他问题，请随时提问。
+
+---
+
+## 删除文件
+
+在Linux的C++程序中删除文件，您可以使用标准库函数`std::remove`或者`std::remove_all`。下面是示例代码：
+
+使用`std::remove`删除单个文件：
+```cpp
+#include <iostream>
+#include <cstdio>
+
+int main() {
+    const char* filePath = "/path/to/file.txt"; // 指定文件路径
+
+    if (std::remove(filePath) != 0) {
+        std::cerr << "Failed to delete file: " << filePath << std::endl;
+    } else {
+        std::cout << "File deleted: " << filePath << std::endl;
+    }
+
+    return 0;
+}
+```
+---
+
+## 删除目录文件
+
+在C++11标准中，没有提供直接删除目录的标准库函数。然而，您可以使用操作系统的相关函数来删除目录和文件。对于Linux系统，您可以使用`rmdir`函数来删除空目录，使用`unlink`函数来删除文件。以下是一个示例代码：
+
+```cpp
+#include <iostream>
+#include <unistd.h>
+#include <sys/stat.h>
+
+bool removeFile(const std::string& filePath) {
+    if (unlink(filePath.c_str()) != 0) {
+        std::cerr << "Failed to delete file: " << filePath << std::endl;
+        return false;
+    }
+    return true;
+}
+
+bool removeDirectory(const std::string& directoryPath) {
+    if (rmdir(directoryPath.c_str()) != 0) {
+        std::cerr << "Failed to delete directory: " << directoryPath << std::endl;
+        return false;
+    }
+    return true;
+}
+
+int main() {
+    const std::string filePath = "/path/to/file.txt";
+    const std::string directoryPath = "/path/to/directory";
+
+    if (removeFile(filePath)) {
+        std::cout << "File deleted: " << filePath << std::endl;
+    }
+
+    if (removeDirectory(directoryPath)) {
+        std::cout << "Directory deleted: " << directoryPath << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在上述示例中，我们定义了两个函数`removeFile`和`removeDirectory`，分别用于删除文件和目录。这些函数使用`unlink`和`rmdir`函数来执行删除操作。如果删除操作成功，函数返回`true`，否则返回`false`。
+
+在`main`函数中，我们指定要删除的文件路径和目录路径，并调用相应的函数进行删除。如果删除操作成功，我们输出相应的成功消息，否则输出错误消息。
+
+请注意，上述代码中使用了`unistd.h`和`sys/stat.h`头文件，这些头文件提供了对操作系统的底层函数的访问。此外，删除操作需要适当的文件系统权限，确保您的程序具有足够的权限来执行删除操作。
+
+希望这可以帮助您在C++11中删除目录和文件。如有其他问题，请随时提问。
+
+## linux 获取内存信息
+
+在Linux上，可以使用 `sys/sysinfo.h` 头文件中的 `sysinfo` 结构和函数来获取系统内存信息。下面是一个C++示例代码，演示如何在Linux下获取可用内存：
+
+```cpp
+#include <sys/sysinfo.h>
+#include <iostream>
+
+int main() {
+    struct sysinfo sys_info;
+    if (sysinfo(&sys_info) != -1) {
+        long long total_memory = sys_info.totalram * sys_info.mem_unit;
+        long long free_memory = sys_info.freeram * sys_info.mem_unit;
+        long long used_memory = total_memory - free_memory;
+        
+        std::cout << "Total Memory: " << total_memory << " bytes" << std::endl;
+        std::cout << "Free Memory: " << free_memory << " bytes" << std::endl;
+        std::cout << "Used Memory: " << used_memory << " bytes" << std::endl;
+    } else {
+        std::cerr << "Failed to retrieve system memory information." << std::endl;
+    }
+
+    return 0;
+}
+```
+
+该代码使用 `sysinfo()` 函数从系统获取内存信息，并将总内存大小、可用内存大小和已使用内存大小打印出来。请注意，`sysinfo()` 函数返回的内存大小单位是字节（bytes）。如果需要以更友好的方式显示内存大小，你可能需要对其进行单位转换（例如以MB或GB为单位）。
+
+编译并运行此程序，将输出类似以下内容：
+
+```
+Total Memory: 16729580544 bytes
+Free Memory: 578932736 bytes
+Used Memory: 16150647808 bytes
+```
+
+请注意，`sysinfo()` 函数返回的内存信息是系统整体的统计信息，可能与实际应用程序可用的内存有所不同。如果需要更精确的内存信息，可以考虑使用特定的第三方库或系统调用。
+
+---
+
 ## std::map erase() 详解
 
 `std::map` 是 C++ 标准库中的关联容器之一，它提供了一种键值对的映射关系。`std::map` 中的元素按照键的顺序进行排序，并且每个键只能出现一次。
