--- a/Grandhonor/rk_工地盒子/1-6_RK平台试验.md
+++ b/Grandhonor/rk_工地盒子/1-6_RK平台试验.md
@@ -13,7 +13,12 @@ docker run -it -d --privileged=true -v /userdata/:/userdata/ -v /dev/media0:/dev
 docker run -it -d --privileged=true -v /userdata/:/userdata/ -v /dev/media0:/dev/media0/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  -p 8000:8000 -p 8001:8001 -p 10022:10022 -p 10008:10008 -p 10009:10009 -p 10010:10010 -p 10011:10011 -p 10012:10012 -p 10013:10013  ubuntu/20.04:0621
 
 # 第三次 增加自启动脚本
-docker run -it -d --privileged=true -v /userdata/:/userdata/ -v /dev/media0:/dev/media0/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  -p 8000:8000 -p 8001:8001 -p 10022:10022 -p 10008:10008 -p 10009:10009 -p 10010:10010 -p 10011:10011 -p 10012:10012 -p 10013:10013 -p 17008:17008 ubuntu/20.04:0621 /bin/bash /etc/init.d/auto-mnc.sh
+docker run -d --privileged=true --restart=always -v /userdata/:/userdata/ -v /dev/media0:/dev/media0/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  -p 8000:8000 -p 8001:8001 -p 10022:10022 -p 10008:10008 -p 10009:10009 -p 10010:10010 -p 10011:10011 -p 10012:10012 -p 10013:10013 -p 17008:17008 rk_1126/20230707:v1 /bin/bash /userdata/edge/auto-run
+```
+
++ 打包容器
+```bash 
+tar -cvf rk_image.tar --exclude=/sys --exclude=/system --exclude=/proc --exclude=rk_image.tar --exclude=/userdata --exclude=/dev/media0 --exclude=/dev/galcore --exclude=/rk_usr --exclude=/tmp/*  /
 ```
 
 ## vca 
